tests/neg/Int01.hs
int :: { v : Int  | v == 14 }
int = ( 12 )
